[tool.poetry]
name = "planet-for-me-test-project"
version = "0.1.0"
description = ""
authors = ["Valeriia Bortnikova <valery.ivlieva@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.0.0"
requests = "^2.26.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
